<resources>
    <string name="app_name">pandora</string>
    <string name="title_hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_info_employee">Share information about your employee</string>
    <string name="title_username">Username</string>
    <string name="title_first_name">First name</string>
    <string name="title_last_name">Last name</string>
    <string name="action_continue_register">continue</string>
    <string name="msg_phrase">This will be your access level to the application, if you’re not the administrator you should contact them first</string>
    <string name="msg_about_function">What does they do in your company?</string>
    <string name="select_your_role">Select your role</string>
    <string name="continue_to_registe">Continue</string>
    <string name="msg_successfully_registered">The user has been successfully registered to <font color="#E24C44">Pandora</font></string>
    <string name="action_login">Login</string>
    <string name="action_reset_password">Forgot my password</string>
    <string name="action_register">I don\'t have acess yet</string>
    <string name="msg_input_email_password">Inform email address and password</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_welcome_onboarding">Welcome to <font color="#E24C44">Pandora!</font></string>
    <string name="msg_about_pandora">We can help your everyday work keeping track of your shifts and maintenance for your vehicle!</string>
    <string name="action_create_account">Register</string>
    <string name="action_login_account">Login</string>
    <string name="title_car_model">Fiat Uno 2007</string>
    <string name="action_role">Select Your Role</string>
    <string name="msg_select_vehicle">Which vehicle are you in?</string>
    <string name="action_to_record_type">Continue</string>
    <string name="msg_type_register">Which action are you registering?</string>
    <string name="action_maintenance">Maintenance</string>
    <string name="action_shift">Shift</string>
    <string name="action_gas">Gas</string>
    <string name="msg_service_cost">Please, inform the service cost for your maintenance</string>
    <string name="action_create_record">Create</string>
    <string name="title_price_service">0,00</string>
    <string name="msg_personal_Info">This will be your access level to the application, if you’re not the administrator you should contact them first</string>
    <string name="title_date_register">06/06/2023 - 07:00 AM</string>
    <string name="title_vehicle">Fiorino 2018</string>
    <string name="title_driver">Driver: Jairo Ceazza</string>
    <string name="action_maintence">Maintenance</string>
    <string name="title_document">Document</string>
    <string name="action_logout">Logout</string>
    <string name="title_user">Hello, Wolnerley</string>
</resources>