<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    android:padding="16dp"
    tools:context=".ui.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/icOnboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_truck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/rouge_red" />

    <TextView
        android:id="@+id/msgWelcomeOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/msg_welcome_onboarding"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icOnboarding" />

    <TextView
        android:id="@+id/msgAboutPandora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/msg_about_pandora"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/msgWelcomeOnboarding" />

    <androidx.cardview.widget.CardView
        android:id="@+id/containerButtonRegister"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/rouge_red"
        android:elevation="8dp"
        android:outlineSpotShadowColor="@color/black"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/containerButtonLogin"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p">

        <Button
            android:id="@+id/toCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/action_create_account"
            android:textSize="16sp"
            app:cornerRadius="4dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/containerButtonLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/off_white"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/containerButtonRegister">

        <Button
            android:id="@+id/toLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/off_white"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/action_login_account"
            android:textColor="@color/rouge_red"
            android:textSize="16sp"
            app:cornerRadius="4dp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>